syntax = "proto3";

package post;

option go_package = "./pkg/pb/post";

service Post {
    rpc AddPost(AddPostRequest) returns (AddPostResponse);
    rpc ListPost(ListPostRequest) returns (ListPostResponse);
    rpc EditPost(EditPostRequest) returns (EditPostResponse);
    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
    // rpc SavePost(SavePostRequest) returns (SavePostResponse);
    // rpc UnSavePost(UnSavePostRequest) returns (UnSavePostResponse);
    rpc CreateCommentPost(CreateCommentRequest) returns (CreateCommentResponse);
    rpc UpdateCommentPost(UpdateCommentRequest) returns (UpdateCommentResponse);
    rpc DeleteCommentPost (DeleteCommentRequest) returns (DeleteCommentResponse);
    rpc UpvotePost(UpvotePostRequest) returns (UpvotePostResponse);
    rpc DownvotePost(DownvotePostRequest) returns (DownvotePostResponse);
}

message AddPostRequest {
    string caption = 1;
    string user_id = 2;
    string media_url = 3;
    bytes media_data = 4;
  }
  

message AddPostResponse {
    string error = 1;
}


message ListPostRequest {
     string user_id = 1;
}

message ListPostResponse {
    repeated Posts posts = 1;
}

message Posts {
    string caption = 1;
    string user_id = 2;
    string media_url = 3;
    bytes media_data = 4;
}

message EditPostResponse {
    string error = 1;
}

message EditPostRequest {
    string post_id = 1;
    string caption = 2;
    int32 user_id = 3;
}

message DeletePostRequest {
    int32 post_id = 1;
}

message DeletePostResponse {
    string message = 1;
}
// message SavePostRequest {
//     int32 post_id = 1;
// }

// message SavePostResponse {
//     bool success = 1;
//     string error_message = 2;
// }

// message UnSavePostRequest {
//     int32 post_id = 1;
// }

// message UnSavePostResponse {
//     bool success = 1;
//     string error_message = 2;
// }

message CreateCommentRequest {
    uint64 post_id = 1;
    uint64 user_id = 2;
    string comment = 3;
  }
  
message CreateCommentResponse {
    bool success = 1;
  }
  
message UpdateCommentRequest {
    uint64 comment_id = 1;
    uint64 post_id = 2;
    uint64 user_id = 3;
    string comment = 4;
  }
  
message UpdateCommentResponse {
    bool success = 1;
  }
  
message DeleteCommentRequest {
    uint64 post_id = 1;
    uint64 user_id = 2;
    uint64 comment_id = 3;
  }
  
message DeleteCommentResponse {
    bool success = 1;
  }
message UpvotePostRequest {
    int32 user_id = 1;
    int32 post_id = 2;
}

message UpvotePostResponse {
    string error = 1;
}

message DownvotePostRequest {
    int32 user_id = 1;
    int32 post_id = 2;
}

message DownvotePostResponse {
    string error = 1;
}